--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,42 @@ services:
             - sail
         ports:
             - 8001:80
+    cron:
+        build:
+            context: .
+            dockerfile: cron.dockerfile
+            args:
+                WWWGROUP: '${WWWGROUP}'
+        image: sail-8.1/app
+        extra_hosts:
+            - 'host.docker.internal:host-gateway'
+        environment:
+            WWWUSER: '${WWWUSER}'
+            LARAVEL_SAIL: 1
+            XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
+            XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
+        volumes:
+            - '.:/var/www/html'
+        networks:
+            - sail
+        depends_on:
+            - mysql
+            - redis
+            - meilisearch
+            - mailhog
+            - selenium
+        command: php artisan schedule:run
+        entrypoint: /bin/sh -c
+        restart: always
+        tty: true
+        stdin_open: true
+        healthcheck:
+            test: ["CMD", "ps", "aux"]
+            interval: 1m
+            timeout: 3s
+            retries: 3
+            start_period: 40s
+        
 networks:
     sail:
         driver: bridge
