--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/ui": "^4.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.7",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
